search results page no longer covers the login and register links or the Kraft logo

--- a/Capstone.Web/Content/Site.css
+++ b/Capstone.Web/Content/Site.css
@@ -58,6 +58,7 @@ a#registerLink {
     text-align: right;
     font-family: '';
     padding-right: 20px;
+    z-index: 100;
 }
 
 a#loginLink {
@@ -65,6 +66,7 @@ a#loginLink {
     color: white;
     text-align: right;
     font-family: '';
+    z-index: 500;
 }
 
 .backgroundMain{
@@ -163,14 +165,13 @@ input[type=date]::-webkit-calendar-picker-indicator {
 /*******************************************RESULTS LIST***********************************************/
 
 .searchResultsPage {
-    position: absolute;
-    height: 100%;
+    height: 70%;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    padding-top: 150px;
+    position: absolute;
+    bottom: 0;
 }
 
 .results {
